# fastapi-users-service

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  t.py
docker/: docker-compose.yaml
service/: .env.dev  .env.test  .gitignore  Dockerfile  Makefile  pyproject.toml
service/app/: main.py
service/app/api/routes/: users.py
service/app/core/: config.py
service/app/core/settings/: base.py  dev.py  env_type.py  test.py
service/app/database/: uow.py
service/app/database/repositories/: repository.py  user.py
service/app/models/: user.py
service/app/services/: auth.py
service/scripts/: docker-entrypoint.sh
src/: main.py
src/api/: dependencies.py  exceptions.py
src/api/routes/: auth.py  users.py
src/app/api/: dependencies.py
src/app/core/settings/: test.py
src/core/settings/: dev.py  test.py
src/database/: engine.py
src/database/repositories/: repository.py
src/infrastructure/db/: engine.py  uow.py
src/infrastructure/db/repositories/: repository.py  user.py
src/infrastructure/db/services/: auth.py  user.py
src/services/: user.py
src/utils/: specification.py
