[project]
name = "fastapi-users-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cache>=0.1.0",
    "fastapi[standard]>=0.115.3",
    "jwt>=1.3.1",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
